@@ -13,119 +13,113 @@ import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertNull;
 import static org.opendaylight.yangtools.yang.stmt.StmtTestUtils.sourceForResource;
 
-import com.google.common.collect.ImmutableSet;
 import java.util.Set;
 import org.junit.Test;
 import org.opendaylight.yangtools.yang.common.QName;
 import org.opendaylight.yangtools.yang.model.api.AnyxmlSchemaNode;
 import org.opendaylight.yangtools.yang.model.api.ContainerSchemaNode;
 import org.opendaylight.yangtools.yang.model.api.LeafSchemaNode;
-import org.opendaylight.yangtools.yang.model.api.Module;
-import org.opendaylight.yangtools.yang.model.api.SchemaContext;
 import org.opendaylight.yangtools.yang.parser.rfc7950.reactor.RFC7950Reactors;
 import org.opendaylight.yangtools.yang.parser.spi.meta.ReactorException;
 import org.opendaylight.yangtools.yang.parser.spi.source.StatementStreamSource;
 
 public class IfFeatureResolutionTest {
-
     private static final StatementStreamSource FOO_MODULE = sourceForResource("/if-feature-resolution-test/foo.yang");
     private static final StatementStreamSource BAR_MODULE = sourceForResource("/if-feature-resolution-test/bar.yang");
 
     @Test
     public void testSomeFeaturesSupported() throws ReactorException {
-        final Set<QName> supportedFeatures = ImmutableSet.of(
-                QName.create("foo-namespace", "test-feature-1"),
-                QName.create("foo-namespace", "test-feature-2"),
-                QName.create("foo-namespace", "test-feature-3"),
-                QName.create("bar-namespace", "imp-feature"));
-
-        final SchemaContext schemaContext = RFC7950Reactors.defaultReactor().newBuild()
+        final var schemaContext = RFC7950Reactors.defaultReactor().newBuild()
                 .addSources(FOO_MODULE, BAR_MODULE)
-                .setSupportedFeatures(supportedFeatures)
+                .setSupportedFeatures(Set.of(
+                    QName.create("foo-namespace", "test-feature-1"),
+                    QName.create("foo-namespace", "test-feature-2"),
+                    QName.create("foo-namespace", "test-feature-3"),
+                    QName.create("bar-namespace", "imp-feature")))
                 .buildEffective();
         assertNotNull(schemaContext);
 
-        final Module testModule = schemaContext.findModule("foo").get();
+        final var testModule = schemaContext.findModule("foo").orElseThrow();
         assertEquals(9, testModule.getChildNodes().size());
 
-        final ContainerSchemaNode testContainerA = (ContainerSchemaNode) testModule.dataChildByName(
+        final var testContainerA = (ContainerSchemaNode) testModule.dataChildByName(
                 QName.create(testModule.getQNameModule(), "test-container-a"));
         assertNull(testContainerA);
 
-        final ContainerSchemaNode testContainerB = (ContainerSchemaNode) testModule.getDataChildByName(
+        final var testContainerB = (ContainerSchemaNode) testModule.getDataChildByName(
                 QName.create(testModule.getQNameModule(), "test-container-b"));
         assertNotNull(testContainerB);
-        final LeafSchemaNode testLeafB = (LeafSchemaNode) testContainerB.getDataChildByName(
+        final var testLeafB = (LeafSchemaNode) testContainerB.getDataChildByName(
                 QName.create(testModule.getQNameModule(), "test-leaf-b"));
         assertNotNull(testLeafB);
 
-        final ContainerSchemaNode testContainerC = (ContainerSchemaNode) testModule.getDataChildByName(
+        final var testContainerC = (ContainerSchemaNode) testModule.getDataChildByName(
                 QName.create(testModule.getQNameModule(), "test-container-c"));
         assertNotNull(testContainerC);
-        final LeafSchemaNode testLeafC = (LeafSchemaNode) testContainerC.getDataChildByName(
+        final var testLeafC = (LeafSchemaNode) testContainerC.getDataChildByName(
                 QName.create(testModule.getQNameModule(), "test-leaf-c"));
         assertNotNull(testLeafC);
 
-        final ContainerSchemaNode testContainerD = (ContainerSchemaNode) testModule.dataChildByName(
+        final var testContainerD = (ContainerSchemaNode) testModule.dataChildByName(
                 QName.create(testModule.getQNameModule(), "test-container-d"));
         assertNull(testContainerD);
 
-        final ContainerSchemaNode testContainerE = (ContainerSchemaNode) testModule.getDataChildByName(
+        final var testContainerE = (ContainerSchemaNode) testModule.getDataChildByName(
                 QName.create(testModule.getQNameModule(), "test-container-e"));
         assertNotNull(testContainerE);
-        final ContainerSchemaNode testSubContainerE = (ContainerSchemaNode) testContainerE.getDataChildByName(
+        final var testSubContainerE = (ContainerSchemaNode) testContainerE.getDataChildByName(
                 QName.create(testModule.getQNameModule(), "test-subcontainer-e"));
         assertNotNull(testSubContainerE);
-        final LeafSchemaNode testLeafE = (LeafSchemaNode) testSubContainerE.dataChildByName(
+        final var testLeafE = (LeafSchemaNode) testSubContainerE.dataChildByName(
                 QName.create(testModule.getQNameModule(), "test-leaf-e"));
         assertNull(testLeafE);
 
-        final ContainerSchemaNode testContainerF = (ContainerSchemaNode) testModule.getDataChildByName(
+        final var testContainerF = (ContainerSchemaNode) testModule.getDataChildByName(
                 QName.create(testModule.getQNameModule(), "test-container-f"));
         assertNotNull(testContainerF);
-        final ContainerSchemaNode testSubContainerF = (ContainerSchemaNode) testContainerF.dataChildByName(
+        final var testSubContainerF = (ContainerSchemaNode) testContainerF.dataChildByName(
                 QName.create(testModule.getQNameModule(), "test-subcontainer-f"));
         assertNull(testSubContainerF);
 
-        final ContainerSchemaNode testContainerG = (ContainerSchemaNode) testModule.getDataChildByName(
+        final var testContainerG = (ContainerSchemaNode) testModule.getDataChildByName(
                 QName.create(testModule.getQNameModule(), "test-container-g"));
         assertNotNull(testContainerG);
         assertEquals(1, testContainerG.getAvailableAugmentations().size());
-        final LeafSchemaNode testLeafG = (LeafSchemaNode) testContainerG.getDataChildByName(
+        final var testLeafG = (LeafSchemaNode) testContainerG.getDataChildByName(
                 QName.create(testModule.getQNameModule(), "test-leaf-g"));
         assertNotNull(testLeafG);
-        final LeafSchemaNode augmentingTestLeafG = (LeafSchemaNode) testContainerG.dataChildByName(
+        final var augmentingTestLeafG = (LeafSchemaNode) testContainerG.dataChildByName(
                 QName.create(testModule.getQNameModule(), "augmenting-test-leaf-g"));
         assertNull(augmentingTestLeafG);
-        final AnyxmlSchemaNode augmentingTestAnyxmlG = (AnyxmlSchemaNode) testContainerG.getDataChildByName(
+        final var augmentingTestAnyxmlG = (AnyxmlSchemaNode) testContainerG.getDataChildByName(
                 QName.create(testModule.getQNameModule(), "augmenting-test-anyxml-g"));
         assertNotNull(augmentingTestAnyxmlG);
 
-        final ContainerSchemaNode testContainerH = (ContainerSchemaNode) testModule.getDataChildByName(
+        final var testContainerH = (ContainerSchemaNode) testModule.getDataChildByName(
                 QName.create(testModule.getQNameModule(), "test-container-h"));
         assertNotNull(testContainerH);
         assertEquals(0, testContainerH.getChildNodes().size());
         assertEquals(0, testContainerH.getUses().size());
 
-        final ContainerSchemaNode testContainerI = (ContainerSchemaNode) testModule.getDataChildByName(
+        final var testContainerI = (ContainerSchemaNode) testModule.getDataChildByName(
                 QName.create(testModule.getQNameModule(), "test-container-i"));
         assertNotNull(testContainerI);
         assertEquals(1, testContainerI.getUses().size());
-        ContainerSchemaNode testGroupingSubContainer = (ContainerSchemaNode) testContainerI.getDataChildByName(
+        var testGroupingSubContainer = (ContainerSchemaNode) testContainerI.getDataChildByName(
                 QName.create(testModule.getQNameModule(), "test-grouping-subcontainer"));
         assertNotNull(testGroupingSubContainer);
-        final LeafSchemaNode testGroupingLeaf = (LeafSchemaNode) testGroupingSubContainer.dataChildByName(
+        final var testGroupingLeaf = (LeafSchemaNode) testGroupingSubContainer.dataChildByName(
                 QName.create(testModule.getQNameModule(), "test-grouping-leaf"));
         assertNull(testGroupingLeaf);
 
-        final ContainerSchemaNode testContainerJ = (ContainerSchemaNode) testModule.getDataChildByName(
+        final var testContainerJ = (ContainerSchemaNode) testModule.getDataChildByName(
                 QName.create(testModule.getQNameModule(), "test-container-j"));
         assertNotNull(testContainerJ);
-        final LeafSchemaNode testLeafJ = (LeafSchemaNode) testContainerJ.getDataChildByName(
+        final var testLeafJ = (LeafSchemaNode) testContainerJ.getDataChildByName(
                 QName.create(testModule.getQNameModule(), "test-leaf-j"));
         assertNotNull(testLeafJ);
 
-        final ContainerSchemaNode testContainerK = (ContainerSchemaNode) testModule.getDataChildByName(
+        final var testContainerK = (ContainerSchemaNode) testModule.getDataChildByName(
                 QName.create(testModule.getQNameModule(), "test-container-k"));
         assertNotNull(testContainerK);
         assertEquals(1, testContainerK.getUses().size());
@@ -133,75 +127,75 @@ public class IfFeatureResolutionTest {
                 QName.create(testModule.getQNameModule(), "test-grouping-subcontainer"));
         assertNotNull(testGroupingSubContainer);
         assertEquals(1, testGroupingSubContainer.getAvailableAugmentations().size());
-        final LeafSchemaNode augmentingTestGroupingLeaf = (LeafSchemaNode) testGroupingSubContainer.getDataChildByName(
+        final var augmentingTestGroupingLeaf = (LeafSchemaNode) testGroupingSubContainer.getDataChildByName(
                 QName.create(testModule.getQNameModule(), "augmenting-test-grouping-leaf"));
         assertNotNull(augmentingTestGroupingLeaf);
-        final LeafSchemaNode augmentingTestGroupingLeaf2 = (LeafSchemaNode) testGroupingSubContainer.dataChildByName(
+        final var augmentingTestGroupingLeaf2 = (LeafSchemaNode) testGroupingSubContainer.dataChildByName(
                 QName.create(testModule.getQNameModule(), "augmenting-test-grouping-leaf-2"));
         assertNull(augmentingTestGroupingLeaf2);
     }
 
     @Test
     public void testAllFeaturesSupported() throws ReactorException {
-        final SchemaContext schemaContext = RFC7950Reactors.defaultReactor().newBuild()
+        final var schemaContext = RFC7950Reactors.defaultReactor().newBuild()
                 .addSources(FOO_MODULE, BAR_MODULE)
                 .buildEffective();
         assertNotNull(schemaContext);
 
-        final Module testModule = schemaContext.findModules("foo").iterator().next();
+        final var testModule = schemaContext.findModules("foo").iterator().next();
         assertNotNull(testModule);
 
         assertEquals(11, testModule.getChildNodes().size());
 
-        final ContainerSchemaNode testContainerA = (ContainerSchemaNode) testModule.getDataChildByName(
+        final var testContainerA = (ContainerSchemaNode) testModule.getDataChildByName(
                 QName.create(testModule.getQNameModule(), "test-container-a"));
         assertNotNull(testContainerA);
-        final LeafSchemaNode testLeafA = (LeafSchemaNode) testContainerA.getDataChildByName(
+        final var testLeafA = (LeafSchemaNode) testContainerA.getDataChildByName(
                 QName.create(testModule.getQNameModule(), "test-leaf-a"));
         assertNotNull(testLeafA);
 
 
-        final ContainerSchemaNode testContainerB = (ContainerSchemaNode) testModule.getDataChildByName(
+        final var testContainerB = (ContainerSchemaNode) testModule.getDataChildByName(
                 QName.create(testModule.getQNameModule(), "test-container-b"));
         assertNotNull(testContainerB);
         final LeafSchemaNode testLeafB = (LeafSchemaNode) testContainerB.getDataChildByName(
                 QName.create(testModule.getQNameModule(), "test-leaf-b"));
         assertNotNull(testLeafB);
 
-        final ContainerSchemaNode testContainerC = (ContainerSchemaNode) testModule.getDataChildByName(
+        final var testContainerC = (ContainerSchemaNode) testModule.getDataChildByName(
                 QName.create(testModule.getQNameModule(), "test-container-c"));
         assertNotNull(testContainerC);
-        final LeafSchemaNode testLeafC = (LeafSchemaNode) testContainerC.getDataChildByName(
+        final var testLeafC = (LeafSchemaNode) testContainerC.getDataChildByName(
                 QName.create(testModule.getQNameModule(), "test-leaf-c"));
         assertNotNull(testLeafC);
 
-        final ContainerSchemaNode testContainerD = (ContainerSchemaNode) testModule.getDataChildByName(
+        final var testContainerD = (ContainerSchemaNode) testModule.getDataChildByName(
                 QName.create(testModule.getQNameModule(), "test-container-d"));
         assertNotNull(testContainerD);
-        final LeafSchemaNode testLeafD = (LeafSchemaNode) testContainerD.getDataChildByName(
+        final var testLeafD = (LeafSchemaNode) testContainerD.getDataChildByName(
                 QName.create(testModule.getQNameModule(), "test-leaf-d"));
         assertNotNull(testLeafD);
 
-        final ContainerSchemaNode testContainerE = (ContainerSchemaNode) testModule.getDataChildByName(
+        final var testContainerE = (ContainerSchemaNode) testModule.getDataChildByName(
                 QName.create(testModule.getQNameModule(), "test-container-e"));
         assertNotNull(testContainerE);
-        final ContainerSchemaNode testSubContainerE = (ContainerSchemaNode) testContainerE.getDataChildByName(
+        final var testSubContainerE = (ContainerSchemaNode) testContainerE.getDataChildByName(
                 QName.create(testModule.getQNameModule(), "test-subcontainer-e"));
         assertNotNull(testSubContainerE);
-        final LeafSchemaNode testLeafE = (LeafSchemaNode) testSubContainerE.getDataChildByName(
+        final var testLeafE = (LeafSchemaNode) testSubContainerE.getDataChildByName(
                 QName.create(testModule.getQNameModule(), "test-leaf-e"));
         assertNotNull(testLeafE);
 
-        final ContainerSchemaNode testContainerF = (ContainerSchemaNode) testModule.getDataChildByName(
+        final var testContainerF = (ContainerSchemaNode) testModule.getDataChildByName(
                 QName.create(testModule.getQNameModule(), "test-container-f"));
         assertNotNull(testContainerF);
-        final ContainerSchemaNode testSubContainerF = (ContainerSchemaNode) testContainerF.getDataChildByName(
+        final var testSubContainerF = (ContainerSchemaNode) testContainerF.getDataChildByName(
                 QName.create(testModule.getQNameModule(), "test-subcontainer-f"));
         assertNotNull(testSubContainerF);
-        final ContainerSchemaNode testSubSubContainerF = (ContainerSchemaNode) testSubContainerF.getDataChildByName(
+        final var testSubSubContainerF = (ContainerSchemaNode) testSubContainerF.getDataChildByName(
                 QName.create(testModule.getQNameModule(), "test-subsubcontainer-f"));
         assertNotNull(testSubSubContainerF);
-        final LeafSchemaNode testLeafF = (LeafSchemaNode) testSubSubContainerF.getDataChildByName(
+        final var testLeafF = (LeafSchemaNode) testSubSubContainerF.getDataChildByName(
                 QName.create(testModule.getQNameModule(), "test-leaf-f"));
         assertNotNull(testLeafF);
 
@@ -209,28 +203,28 @@ public class IfFeatureResolutionTest {
                 QName.create(testModule.getQNameModule(), "test-container-g"));
         assertNotNull(testContainerG);
         assertEquals(2, testContainerG.getAvailableAugmentations().size());
-        final LeafSchemaNode testLeafG = (LeafSchemaNode) testContainerG.getDataChildByName(
+        final var testLeafG = (LeafSchemaNode) testContainerG.getDataChildByName(
                 QName.create(testModule.getQNameModule(), "test-leaf-g"));
         assertNotNull(testLeafG);
-        final LeafSchemaNode augmentingTestLeafG = (LeafSchemaNode) testContainerG.getDataChildByName(
+        final var augmentingTestLeafG = (LeafSchemaNode) testContainerG.getDataChildByName(
                 QName.create(testModule.getQNameModule(), "augmenting-test-leaf-g"));
         assertNotNull(augmentingTestLeafG);
-        final AnyxmlSchemaNode augmentingTestAnyxmlG = (AnyxmlSchemaNode) testContainerG.getDataChildByName(
+        final var augmentingTestAnyxmlG = (AnyxmlSchemaNode) testContainerG.getDataChildByName(
                 QName.create(testModule.getQNameModule(), "augmenting-test-anyxml-g"));
         assertNotNull(augmentingTestAnyxmlG);
 
-        final ContainerSchemaNode testContainerH = (ContainerSchemaNode) testModule.getDataChildByName(
+        final var testContainerH = (ContainerSchemaNode) testModule.getDataChildByName(
                 QName.create(testModule.getQNameModule(), "test-container-h"));
         assertNotNull(testContainerH);
         assertEquals(1, testContainerH.getUses().size());
-        ContainerSchemaNode testGroupingSubContainer = (ContainerSchemaNode) testContainerH.getDataChildByName(
+        var testGroupingSubContainer = (ContainerSchemaNode) testContainerH.getDataChildByName(
                 QName.create(testModule.getQNameModule(), "test-grouping-subcontainer"));
         assertNotNull(testGroupingSubContainer);
-        LeafSchemaNode testGroupingLeaf = (LeafSchemaNode) testGroupingSubContainer.getDataChildByName(
+        var testGroupingLeaf = (LeafSchemaNode) testGroupingSubContainer.getDataChildByName(
                 QName.create(testModule.getQNameModule(), "test-grouping-leaf"));
         assertNotNull(testGroupingLeaf);
 
-        final ContainerSchemaNode testContainerI = (ContainerSchemaNode) testModule.getDataChildByName(
+        final var testContainerI = (ContainerSchemaNode) testModule.getDataChildByName(
                 QName.create(testModule.getQNameModule(), "test-container-i"));
         assertNotNull(testContainerI);
         assertEquals(1, testContainerI.getUses().size());
@@ -241,14 +235,14 @@ public class IfFeatureResolutionTest {
                 QName.create(testModule.getQNameModule(), "test-grouping-leaf"));
         assertNotNull(testGroupingLeaf);
 
-        final ContainerSchemaNode testContainerJ = (ContainerSchemaNode) testModule.getDataChildByName(
+        final var testContainerJ = (ContainerSchemaNode) testModule.getDataChildByName(
                 QName.create(testModule.getQNameModule(), "test-container-j"));
         assertNotNull(testContainerJ);
-        final LeafSchemaNode testLeafJ = (LeafSchemaNode) testContainerJ.getDataChildByName(
+        final var testLeafJ = (LeafSchemaNode) testContainerJ.getDataChildByName(
                 QName.create(testModule.getQNameModule(), "test-leaf-j"));
         assertNotNull(testLeafJ);
 
-        final ContainerSchemaNode testContainerK = (ContainerSchemaNode) testModule.getDataChildByName(
+        final var testContainerK = (ContainerSchemaNode) testModule.getDataChildByName(
                 QName.create(testModule.getQNameModule(), "test-container-k"));
         assertNotNull(testContainerK);
         assertEquals(1, testContainerK.getUses().size());
@@ -256,10 +250,10 @@ public class IfFeatureResolutionTest {
                 QName.create(testModule.getQNameModule(), "test-grouping-subcontainer"));
         assertNotNull(testGroupingSubContainer);
         assertEquals(1, testGroupingSubContainer.getAvailableAugmentations().size());
-        final LeafSchemaNode augmentingTestGroupingLeaf = (LeafSchemaNode) testGroupingSubContainer.getDataChildByName(
+        final var augmentingTestGroupingLeaf = (LeafSchemaNode) testGroupingSubContainer.getDataChildByName(
                 QName.create(testModule.getQNameModule(), "augmenting-test-grouping-leaf"));
         assertNotNull(augmentingTestGroupingLeaf);
-        final LeafSchemaNode augmentingTestGroupingLeaf2 = (LeafSchemaNode) testGroupingSubContainer.getDataChildByName(
+        final var augmentingTestGroupingLeaf2 = (LeafSchemaNode) testGroupingSubContainer.getDataChildByName(
                 QName.create(testModule.getQNameModule(), "augmenting-test-grouping-leaf-2"));
         assertNotNull(augmentingTestGroupingLeaf2);
         testGroupingLeaf = (LeafSchemaNode) testGroupingSubContainer.getDataChildByName(
@@ -269,66 +263,66 @@ public class IfFeatureResolutionTest {
 
     @Test
     public void testNoFeaturesSupported() throws ReactorException {
-        final SchemaContext schemaContext = RFC7950Reactors.defaultReactor().newBuild()
+        final var schemaContext = RFC7950Reactors.defaultReactor().newBuild()
                 .addSources(FOO_MODULE, BAR_MODULE)
-                .setSupportedFeatures(ImmutableSet.of())
+                .setSupportedFeatures(Set.of())
                 .buildEffective();
         assertNotNull(schemaContext);
 
-        final Module testModule = schemaContext.findModules("foo").iterator().next();
+        final var testModule = schemaContext.findModules("foo").iterator().next();
         assertNotNull(testModule);
 
         assertEquals(6, testModule.getChildNodes().size());
 
-        final ContainerSchemaNode testContainerE = (ContainerSchemaNode) testModule.getDataChildByName(
+        final var testContainerE = (ContainerSchemaNode) testModule.getDataChildByName(
                 QName.create(testModule.getQNameModule(), "test-container-e"));
         assertNotNull(testContainerE);
-        final ContainerSchemaNode testSubContainerE = (ContainerSchemaNode) testContainerE.getDataChildByName(
+        final var testSubContainerE = (ContainerSchemaNode) testContainerE.getDataChildByName(
                 QName.create(testModule.getQNameModule(), "test-subcontainer-e"));
         assertNotNull(testSubContainerE);
-        final LeafSchemaNode testLeafE = (LeafSchemaNode) testSubContainerE.dataChildByName(
+        final var testLeafE = (LeafSchemaNode) testSubContainerE.dataChildByName(
                 QName.create(testModule.getQNameModule(), "test-leaf-e"));
         assertNull(testLeafE);
 
-        final ContainerSchemaNode testContainerF = (ContainerSchemaNode) testModule.getDataChildByName(
+        final var testContainerF = (ContainerSchemaNode) testModule.getDataChildByName(
                 QName.create(testModule.getQNameModule(), "test-container-f"));
         assertNotNull(testContainerF);
-        final ContainerSchemaNode testSubContainerF = (ContainerSchemaNode) testContainerF.dataChildByName(
+        final var testSubContainerF = (ContainerSchemaNode) testContainerF.dataChildByName(
                 QName.create(testModule.getQNameModule(), "test-subcontainer-f"));
         assertNull(testSubContainerF);
 
-        final ContainerSchemaNode testContainerG = (ContainerSchemaNode) testModule.getDataChildByName(
+        final var testContainerG = (ContainerSchemaNode) testModule.getDataChildByName(
                 QName.create(testModule.getQNameModule(), "test-container-g"));
         assertNotNull(testContainerG);
         assertEquals(1, testContainerG.getAvailableAugmentations().size());
-        final LeafSchemaNode testLeafG = (LeafSchemaNode) testContainerG.getDataChildByName(
+        final var testLeafG = (LeafSchemaNode) testContainerG.getDataChildByName(
                 QName.create(testModule.getQNameModule(), "test-leaf-g"));
         assertNotNull(testLeafG);
-        final LeafSchemaNode augmentingTestLeafG = (LeafSchemaNode) testContainerG.dataChildByName(
+        final var augmentingTestLeafG = (LeafSchemaNode) testContainerG.dataChildByName(
                 QName.create(testModule.getQNameModule(), "augmenting-test-leaf-g"));
         assertNull(augmentingTestLeafG);
-        final AnyxmlSchemaNode augmentingTestAnyxmlG = (AnyxmlSchemaNode) testContainerG.getDataChildByName(
+        final var augmentingTestAnyxmlG = (AnyxmlSchemaNode) testContainerG.getDataChildByName(
                 QName.create(testModule.getQNameModule(), "augmenting-test-anyxml-g"));
         assertNotNull(augmentingTestAnyxmlG);
 
-        final ContainerSchemaNode testContainerH = (ContainerSchemaNode) testModule.getDataChildByName(
+        final var testContainerH = (ContainerSchemaNode) testModule.getDataChildByName(
                 QName.create(testModule.getQNameModule(), "test-container-h"));
         assertNotNull(testContainerH);
         assertEquals(0, testContainerH.getChildNodes().size());
         assertEquals(0, testContainerH.getUses().size());
 
-        final ContainerSchemaNode testContainerI = (ContainerSchemaNode) testModule.getDataChildByName(
+        final var testContainerI = (ContainerSchemaNode) testModule.getDataChildByName(
                 QName.create(testModule.getQNameModule(), "test-container-i"));
         assertNotNull(testContainerI);
         assertEquals(1, testContainerI.getUses().size());
-        ContainerSchemaNode testGroupingSubContainer = (ContainerSchemaNode) testContainerI.getDataChildByName(
+        var testGroupingSubContainer = (ContainerSchemaNode) testContainerI.getDataChildByName(
                 QName.create(testModule.getQNameModule(), "test-grouping-subcontainer"));
         assertNotNull(testGroupingSubContainer);
-        LeafSchemaNode testGroupingLeaf = (LeafSchemaNode) testGroupingSubContainer.dataChildByName(
+        var testGroupingLeaf = (LeafSchemaNode) testGroupingSubContainer.dataChildByName(
                 QName.create(testModule.getQNameModule(), "test-grouping-leaf"));
         assertNull(testGroupingLeaf);
 
-        final ContainerSchemaNode testContainerK = (ContainerSchemaNode) testModule.getDataChildByName(
+        final var testContainerK = (ContainerSchemaNode) testModule.getDataChildByName(
                 QName.create(testModule.getQNameModule(), "test-container-k"));
         assertNotNull(testContainerK);
         assertEquals(1, testContainerK.getUses().size());
@@ -336,10 +330,10 @@ public class IfFeatureResolutionTest {
                 QName.create(testModule.getQNameModule(), "test-grouping-subcontainer"));
         assertNotNull(testGroupingSubContainer);
         assertEquals(1, testGroupingSubContainer.getAvailableAugmentations().size());
-        final LeafSchemaNode augmentingTestGroupingLeaf = (LeafSchemaNode) testGroupingSubContainer.dataChildByName(
+        final var augmentingTestGroupingLeaf = (LeafSchemaNode) testGroupingSubContainer.dataChildByName(
                 QName.create(testModule.getQNameModule(), "augmenting-test-grouping-leaf"));
         assertNull(augmentingTestGroupingLeaf);
-        final LeafSchemaNode augmentingTestGroupingLeaf2 = (LeafSchemaNode) testGroupingSubContainer.dataChildByName(
+        final var augmentingTestGroupingLeaf2 = (LeafSchemaNode) testGroupingSubContainer.dataChildByName(
                 QName.create(testModule.getQNameModule(), "augmenting-test-grouping-leaf-2"));
         assertNull(augmentingTestGroupingLeaf2);
         testGroupingLeaf = (LeafSchemaNode) testGroupingSubContainer.dataChildByName(
